--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="de">
 <head>
 <meta charset="UTF-8">
-<title>ELSPro Configurator</title>
+<title>ELSPro Fahrzeug Configurator</title>
 
 <style>
 body{font-family:Inter,system-ui;background:#020617;color:#e5e7eb;margin:0;padding:20px}
 h1{margin-bottom:10px}
-.tabs{display:flex;gap:8px;margin-bottom:12px}
+.tabs{display:flex;gap:8px;margin-bottom:12px;flex-wrap:wrap}
 .tab{padding:8px 14px;border-radius:10px;background:#020617;border:1px solid #1e293b;cursor:pointer}
 .tab.active{background:#2563eb}
 .panel{display:none}
 .panel.active{display:block}
-.card{background:#020617;border-radius:16px;padding:16px;box-shadow:0 20px 50px rgba(0,0,0,.6)}
+.card{background:#020617;border-radius:16px;padding:16px;margin-bottom:14px;box-shadow:0 20px 50px rgba(0,0,0,.6)}
 label{display:block;margin-top:10px;font-size:13px}
 input,select,textarea,button{
 width:100%;margin-top:6px;padding:10px;border-radius:10px;
@@ -23,6 +23,7 @@ textarea{height:720px;font-family:ui-monospace,monospace}
 button{font-weight:600;cursor:pointer}
 .add{background:#22c55e;color:#022c22}
 .remove{background:#dc2626}
+h3{margin:0 0 6px 0}
 </style>
 </head>
 
@@ -35,33 +36,62 @@ button{font-weight:600;cursor:pointer}
 <div class="tab" onclick="tab(1)">Light</div>
 <div class="tab" onclick="tab(2)">Front</div>
 <div class="tab" onclick="tab(3)">Rear</div>
-<div class="tab" onclick="tab(4)">Sirenen</div>
-<div class="tab" onclick="tab(5)">EnvLights</div>
+<div class="tab" onclick="tab(4)">Matrix</div>
+<div class="tab" onclick="tab(5)">Sirenen</div>
+<div class="tab" onclick="tab(6)">EnvLights</div>
 </div>
 
 <div class="card">
 
+<!-- Allgemein -->
 <div class="panel active">
 <label>Spawnname<input id="vehicle" value="YourVehicle"></label>
 <label>Layout<input id="layout" value="Test1"></label>
 <label>NoFlash<select id="noflash"><option>true</option><option>false</option></select></label>
 </div>
 
+<!-- Light -->
 <div class="panel">
 <div id="light"></div>
 <button class="add" onclick="addExtra(light)">+ Extra</button>
 </div>
 
+<!-- Front -->
 <div class="panel">
 <div id="front"></div>
 <button class="add" onclick="addExtra(front)">+ Extra</button>
 </div>
 
+<!-- Rear -->
 <div class="panel">
 <div id="rear"></div>
 <button class="add" onclick="addExtra(rear)">+ Extra</button>
 </div>
 
+<!-- MATRIX -->
+<div class="panel">
+
+<div class="card">
+<h3>Matrix Modus 0 (Standard)</h3>
+<div id="matrix0"></div>
+<button class="add" onclick="addExtra(matrix0)">+ Matrix Extra</button>
+</div>
+
+<div class="card">
+<h3>Matrix Modus 1 (NUM2)</h3>
+<div id="matrix1"></div>
+<button class="add" onclick="addExtra(matrix1)">+ Matrix Extra</button>
+</div>
+
+<div class="card">
+<h3>Matrix Modus 2 (NUM2)</h3>
+<div id="matrix2"></div>
+<button class="add" onclick="addExtra(matrix2)">+ Matrix Extra</button>
+</div>
+
+</div>
+
+<!-- Sirenen -->
 <div class="panel">
 <div id="sirens"></div>
 <button class="add" onclick="addSiren()">+ Sirene</button>
@@ -80,6 +110,7 @@ button{font-weight:600;cursor:pointer}
 <label>Megaphone<select id="mega"><option>true</option><option>false</option></select></label>
 </div>
 
+<!-- EnvLights -->
 <div class="panel">
 <div id="env"></div>
 <button class="add" onclick="addEnvGroup()">+ Env Extra</button>
@@ -91,8 +122,21 @@ button{font-weight:600;cursor:pointer}
 </div>
 
 <script>
-const patterns=["double","double_inv","rapid","single","steady","wigwag_a","wigwag_b","v47_double_A","v47_double_B","v47_double_C","matrix","matrix_inv","tree","tree_inv","heck_hyper","heck_rapid","heck_aggro_a","heck_aggro_b"];
-const sirenList=["SIREN_echo","SIREN_CHARLIE","SIREN_ALPHA","SIREN_BRAVO","SIREN_DELTA","SIREN_FOXTROT","SIREN_GOLF","SIREN_HOTEL"];
+const patterns=[
+"rapid","steady","single",
+"double","double_inv",
+"wigwag_a","wigwag_b",
+"v47_double_A","v47_double_B","v47_double_C",
+"matrix","matrix_inv",
+"tree","tree_inv",
+"heck_hyper","heck_rapid","heck_aggro_a","heck_aggro_b"
+];
+
+const sirenList=[
+"SIREN_echo","SIREN_CHARLIE","SIREN_ALPHA",
+"SIREN_BRAVO","SIREN_DELTA","SIREN_FOXTROT",
+"SIREN_GOLF","SIREN_HOTEL"
+];
 
 function tab(i){
 document.querySelectorAll('.tab').forEach((t,n)=>t.classList.toggle('active',n===i));
@@ -106,7 +150,7 @@ return `<select multiple>${patterns.map(p=>`<option>${p}</option>`).join('')}</s
 function addExtra(c){
 const r=document.createElement('div');
 r.className='row';
-r.innerHTML=`<input class="id" placeholder="ID">${patternSelect()}<button class="remove" onclick="this.parentNode.remove()">X</button>`;
+r.innerHTML=`<input class="id" placeholder="Extra ID">${patternSelect()}<button class="remove" onclick="this.parentNode.remove()">X</button>`;
 c.appendChild(r);
 }
 
@@ -117,38 +161,10 @@ r.innerHTML=`<select>${sirenList.map(s=>`<option>${s}</option>`).join('')}</sele
 sirens.appendChild(r);
 }
 
-function addEnvGroup(){
-const g=document.createElement('div');
-g.className='card';
-g.style.marginTop='10px';
-g.innerHTML=`<label>Extra ID<input class="eid"></label><div class="elist"></div><button class="add">+ EnvLight</button>`;
-g.querySelector('.add').onclick=()=>addEnv(g.querySelector('.elist'));
-env.appendChild(g);
-}
-
-function addEnv(c){
-const r=document.createElement('div');
-r.className='row';
-r.innerHTML=`
-<input placeholder="type" value="point">
-<input placeholder="dir" value="out">
-<input placeholder="rotX" value="0.0">
-<input placeholder="rotY" value="0.0">
-<input placeholder="rotZ" value="0.0">
-<input placeholder="offsetX" value="1.15">
-<input placeholder="offsetY" value="1.65">
-<input placeholder="offsetZ" value="2.15">
-<input type="color" value="#0000ff">
-<input placeholder="range" value="25.0">
-<input placeholder="intensity" value="2.5">
-<button class="remove" onclick="this.parentNode.remove()">X</button>`;
-c.appendChild(r);
-}
-
 function buildExtras(c){
 let o=[];
 [...c.children].forEach(r=>{
-const id=r.querySelector('.id').value;
+const id=r.querySelector('.id')?.value;
 const sel=r.querySelector('select');
 if(!id||!sel)return;
 const p=[...sel.selectedOptions].map(o=>`"${o.value}"`);
@@ -157,86 +173,50 @@ o.push(p.length>1?`        [${id}] = {${p.join(', ')}},`:`        [${id}] = ${p[
 return o.join("\n");
 }
 
-function buildEnvLights(){
-    let o = [];
-    [...env.children].forEach(group => {
-        const eid = group.querySelector('.eid').value;
-        if (!eid) return;
-        const rows = [...group.querySelector('.elist').children];
-        let extras = rows.map(r => {
-            const inputs = r.querySelectorAll('input');
-            const type = inputs[0].value || "point";
-            const dir = inputs[1].value || "";
-            const rotX = parseFloat(inputs[2].value)||0;
-            const rotY = parseFloat(inputs[3].value)||0;
-            const rotZ = parseFloat(inputs[4].value)||0;
-            const offsetX = parseFloat(inputs[5].value)||0;
-            const offsetY = parseFloat(inputs[6].value)||0;
-            const offsetZ = parseFloat(inputs[7].value)||0;
-            const colorHex = inputs[8].value || "#0000ff";
-            const rC = parseInt(colorHex.substring(1,3),16);
-            const gC = parseInt(colorHex.substring(3,5),16);
-            const bC = parseInt(colorHex.substring(5,7),16);
-            const range = parseFloat(inputs[9].value)||0;
-            const intensity = parseFloat(inputs[10].value)||0;
-
-            let s = `{
-                type = "${type}",\n`;
-            if(dir) s += `                dir = "${dir}",\n`;
-            s += `                rotation = { x = ${rotX}, y = ${rotY}, z = ${rotZ} },
-                offset    = { x = ${offsetX}, y = ${offsetY}, z = ${offsetZ} },
-                color     = { r = ${rC}, g = ${gC}, b = ${bC} },
-                range     = ${range},
-                intensity = ${intensity}
-            }`;
-            return s;
-        });
-        if(extras.length>0) o.push(`        ["${eid}"] = {\n${extras.join(',\n')}\n        },`);
-    });
-    return o.join("\n");
-}
-
 function generate(){
 out.value=
 `ELSPro.Vehicles[GetHashKey("${vehicle.value}")] = {
-    
-    layout = "${layout.value}",
 
+    layout = "${layout.value}",
     noFlash = ${noflash.value},
 
-    -- Licht-Extras
     lightExtras = {
 ${buildExtras(light)}
     },
 
-    -- Frontblitzer
     frontExtras = {
 ${buildExtras(front)}
     },
 
-    -- Heckwarnblitzer
     rearExtras = {
 ${buildExtras(rear)}
     },
 
-    -- Sirenen
+    matrixExtras = {
+${buildExtras(matrix0)}
+    },
+
+    matrixExtras_1 = {
+${buildExtras(matrix1)}
+    },
+
+    matrixExtras_2 = {
+${buildExtras(matrix2)}
+    },
+
     wmTones = {
 ${[...sirens.children].map((r,i)=>`        [${i+1}] = "${r.querySelector('select').value}"`).join(',\n')}
     },
 
-    sirenOffset      = { x = ${sx.value}, y = ${sy.value}, z = ${sz.value} },
+    sirenOffset      = { x=${sx.value}, y=${sy.value}, z=${sz.value} },
     sirenDirectional = ${sdir.value},
     sirenQuietZone   = "${squiet.value}",
     sirenRange       = ${srange.value},
     allowTrafficClear = ${traffic.value},
-    hasMegaphone      = ${mega.value},
-
-    -- EnvLights
-    envLights = {
-${buildEnvLights()}
-    }
+    hasMegaphone      = ${mega.value}
 }`;
 }
 </script>
+
 </body>
 </html>
